--- a/Lukyanova_Vika_Task6/Task2/Task2.csproj
+++ b/Lukyanova_Vika_Task6/Task2/Task2.csproj
@@ -38,6 +38,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ring.cs" />
+    <Compile Include="Round.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
