--- a/drawgraphProgram/SystAnalys_lr1/SystAnalys_lr1.csproj
+++ b/drawgraphProgram/SystAnalys_lr1/SystAnalys_lr1.csproj
@@ -59,6 +59,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Request.Designer.cs">
+      <DependentUpon>Request.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="aboutForm.resx">
       <DependentUpon>aboutForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +81,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Request.resx">
+      <DependentUpon>Request.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -117,6 +126,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\cycle.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\no-translate-detected_318-60590.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\no-translate-detected_318-605901.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\no-translate-detected_318-605902.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
